fix sidebar scroll bar overflow

--- a/src/components/gwf-vis-host-sidebar/gwf-vis-host-sidebar.css
+++ b/src/components/gwf-vis-host-sidebar/gwf-vis-host-sidebar.css
@@ -9,6 +9,7 @@
   height: 100%;
   width: var(--sidebar-width);
   transition: width 0.3s;
+  border-radius: inherit;
 }
 
 [part="inner-container"] {
